<resources>
    <string name="app_name">TCG</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Paramètres</string>
    <string name="search">Chercher</string>

    <string name="main_title">Dummy Tests</string>
    <string name="main_button_call">Call tests</string>
    <string name="main_button_sms">SMS tests</string>
    <string name="main_button_data">Data tests</string>

    <string name="menu_history">Historique</string>
    <string name="menu_call">Appels</string>
    <string name="menu_sms">SMS</string>
    <string name="menu_data">Données mobiles</string>

    <string name="make_call_title">Passer un appel</string>
    <string name="make_call_phone_input">Entrer le numéro de téléphone</string>
    <string name="make_call_duration_input">Entrer la durée de l\'appel</string>
    <string name="make_call_timeout_input">Entrer le retard</string>
    <string name="make_call_submit_button">Emettre</string>

    <string name="make_data_title">Utiliser la data</string>
    <string name="make_data_path_input">Entrer le nom du fichier</string>
    <string name="make_data_url_input">Entrer l\'url</string>
    <string name="make_data_timeout_input">Entrer le retard</string>
    <string name="make_data_submit_button">Emettre</string>

    <string name="make_sms_title">Envoyer un SMS</string>
    <string name="make_sms_phone_input">Entrer le numéro de téléphone</string>
    <string name="make_sms_text_input">Saisissez le SMS</string>
    <string name="make_sms_timeout_input">Entrer le retard</string>
    <string name="make_sms_submit_button">Envoyer</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
